Implemented basic inventory, included more weapons.

--- a/index.html
+++ b/index.html
@@ -1,31 +1,17 @@
-<!doctype html> 
-<html lang="en"> 
-<head> 
-	<meta charset="UTF-8" />
-	<title>CI328 Phaser Demo</title>
+<!doctype html>
+<html lang="en">
 
-    <!-- Load phaser -->
-	<script type="text/javascript" src="libs/phaser.min.js"></script>
+<head>
+    <meta charset="UTF-8" />
+    <title>CI328 Phaser Demo</title>
 
-    <!-- Load user files -->
-    <script src="js/main.js"></script>
-    <script src="js/systems.js"></script>
-    <script src="js/player.js"></script>
-    <script src="js/entities.js"></script>
-
-    <!-- Remove borders around the game window -->
-    <style type="text/css">
-        body {
-            margin: 0;
-        }
-    </style>
 </head>
+
 <body>
 
-<!-- Define entry point -->
-<script type="text/javascript">
-    window.onload = main;
-</script>
+    <a href="/game.html">Game</a>
+    <a href="/inventory.html">Inventory</a>
 
 </body>
+
 </html>
