--- a/outlaw.html
+++ b/outlaw.html
@@ -32,7 +32,7 @@
                         <label for="pass">Password:</label> <input type="password" name="pass"><br>
                         <input type="submit">
                     </form>
-                    Dont have an account?<button onClick="changeToTab('register')">SIGN UP</button>
+                    Don't have an account?<button onClick="changeToTab('register')">SIGN UP</button>
                 </div>
             </div>
         </div>
